Trevius: Non-Player Race spawns will cause the client to crash, so it is recommended to test it in an empty zone.
Trevius: Also, items in the bank will cause it to crash, but normal inventory seems to work fine so far.
Trevius: You cannot create a character on this client yet, so you must use an existing character.

==04/02/2012==
JJ: Removed additional library and include directories from windows projects as they were not standard locations for all.

==03/29/2012==
Sorvani: Resurrections effects will again be applied to characters who are in a zone where combat is not allowed (GL, PoK etc) when they receive a rez.

==03/19/2012==
Bad_Captain: Bots: A few fixed for #bot stance command 

==03/19/2012==
Bad_Captain: Bots: Implemented bot stances. See forum post. 

Required SQL:
utils/sql/svn/2107_required_bot_stances.sql

==03/2/2012==
Bad_Captain: Fixed potential crash in group roles code when a group member is removed.

==02/28/2012==
Sorvani: Added check for ST_AEBard song before sending spell SPELL_NO_HOLD
Bad_Captain: Implemented Group Roles via UI (SoD+)- Set group roles, maintains across zones, save/load grouprole sets (load doesn't appear to work on UF- may be a client bug as client doesn't send request to the server for saved group roles as SoD client does)
Bad_Captain: Fixed FindType to allow for spell effects > 127. Observed by bots trying to cure corruption (effectid 369) when client has a mount (summonhorse effectid 113: 369-128-128=113).
Bad_Captain: Bots- fixed bot summoning of client corpses, fixed ability to spawn more bots than allowed via server rule (#bot botgroup load was not checking for SpawnBotCount rule), fixed bot issue with receiving buff with Group with Pets target type.

Required SQL:
utils/sql/svn/2104_required_group_roles.sql

==02/11/2012==
Secrets: Fixed two more hanging issues introduced regardless of the item discovery feature was on or off.