@@ -6,6 +6,7 @@ Trevius: Many of the core systems are basically functional, but this client is s
 Trevius: Non-Player Race spawns will cause the client to crash, so it is recommended to test it in an empty zone.
 Trevius: Also, items in the bank will cause it to crash, but normal inventory seems to work fine so far.
 Trevius: You cannot create a character on this client yet, so you must use an existing character.
+Derision: VOA: Fixed zoning. Adjusted spawn encoding.
 
 ==04/02/2012==
 JJ: Removed additional library and include directories from windows projects as they were not standard locations for all.
